--- a/index.html
+++ b/index.html
@@ -45,10 +45,15 @@
 
 
 
+
+
+
+
+
 <h3>October 4, 2024</h3>
 <h1>Papers Accepted to NeurIPS 2024</h1>
 <br>
-We've had several papers accepted to the <a href="https://nips.cc/Conferences/2024">38th Annual Conference on Neural Information Processing Systems (NeurIPS 2024)</a>, which will run during December 10-December 15, 2024 in Vancouver, Canada.
+We've had several papers accepted to the <a href="https://nips.cc/Conferences/2024">38th Annual Conference on Neural Information Processing Systems (NeurIPS 2024)</a>, which will run during December 10--15, 2024 in Vancouver, Canada.
 
 <br><br>
 
@@ -61,14 +66,15 @@ by Vladimir Malinovskii, Denis Mazur, Ivan Ilin, Denis Kuznedelev, Konstantin Bu
 
 <b> 2) "Improving the Worst-Case Bidirectional Communication Complexity for Nonconvex Distributed Optimization under Function Similarity"</b><br>
 <a href="https://arxiv.org/abs/2402.06412">[arXiv]</a> <br>
-by Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik.
+by Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik
 <br>
 <span class="important">Spotlight</span><br>  
 <br>
 
 <b> 3) "On the Optimal Time Complexities in Decentralized Stochastic Asynchronous Optimization"</b> <br>
 <a href="https://arxiv.org/abs/2405.16218">[arXiv]</a>  <br>
-by Alexander Tyurin and Peter Richtárik.<br>
+by Alexander Tyurin and Peter Richtárik
+<br>
 <span class="important">Poster</span><br>  
 <br>
 
@@ -81,42 +87,42 @@ by Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik
 
 <b> 5) "MicroAdam: Accurate Adaptive Optimization with Low Space Overhead and Provable Convergence"</b><br>
 <a href="https://arxiv.org/abs/2405.15593">[arXiv]</a>  <br>
-by Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh.
+by Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh
 <br>
 <span class="important">Poster</span><br>  
 <br>
 
 <b> 6) "Freya PAGE: First Optimal Time Complexity for Large-Scale Nonconvex Finite-Sum Optimization with Heterogeneous Asynchronous Computations"</b><br>
 <a href="https://arxiv.org/abs/2405.15545">[arXiv]</a>  <br>
-by Alexander Tyurin, Kaja Gruntkowska, and Peter Richtárik.
+by Alexander Tyurin, Kaja Gruntkowska, and Peter Richtárik
 <br>
 <span class="important">Poster</span><br>  
 <br>
 
 <b> 7) "Don't Compress Gradients in Random Reshuffling: Compress Gradient Differences"</b><br>
 <a href="https://arxiv.org/abs/2206.07021">[arXiv]</a>  <br>
-by Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko, and Peter Richtárik.
+by Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko, and Peter Richtárik
 <br>
 <span class="important">Poster</span><br>  
 <br>
 
 <b> 8) "The Power of Extrapolation in Federated Learning"</b><br>
 <a href="https://arxiv.org/abs/2405.13766">[arXiv]</a>  <br>
-by Hanmin Li, Kirill Acharya, and Peter Richtárik.
+by Hanmin Li, Kirill Acharya, and Peter Richtárik
 <br>
 <span class="important">Poster</span><br>  
 <br>
 
 <b> 9) "Byzantine Robustness and Partial Participation Can Be Achieved at Once: Just Clip Gradient Differences"</b><br>
 <a href="https://arxiv.org/abs/2311.14127">[arXiv]</a>  <br>
-by Grigory Malinovsky, Peter Richtárik, Samuel Horváth, and Eduard Gorbunov.
+by Grigory Malinovsky, Peter Richtárik, Samuel Horváth, and Eduard Gorbunov
 <br>
 <span class="important">Poster</span><br>  
 <br>
 
 <b> 10) "Cohort Squeeze: Beyond a Single Communication Round per Cohort in Cross-Device Federated Learning"</b><br>
 <a href="https://arxiv.org/abs/2406.01115">[arXiv]</a>  <br>
-by Kai Yi, Timur Kharisov, Igor Sokolov, and Peter Richtárik.
+by Kai Yi, Timur Kharisov, Igor Sokolov, and Peter Richtárik
 <br>
 <span class="important">FL Workshop Oral</span><br>  
 <br>
@@ -142,7 +148,7 @@ joint work with Hanmin Li.
  <br>
  <br>
   
-Abstract: <i>Enhancing the FedProx federated learning algorithm (Li et al., 2020) with server-side extrapolation, Li et al. (2024a) recently introduced the FedExProx method. Their theoretical analysis, however, relies on the assumption that each client computes a certain proximal operator exactly, which is impractical since this is virtually never possible to do in real settings. In this paper, we investigate the behavior of FedExProx without this exactness assumption in the smooth and globally strongly convex setting. We establish a general convergence result, showing that inexactness leads to convergence to a neighborhood of the solution. Additionally, we demonstrate that, with careful control, the adverse effects of this inexactness can be mitigated. By linking inexactness to biased compression (Beznosikov et al., 2023), we refine our analysis, highlighting robustness of extrapolation to inexact proximal updates. We also examine the local iteration complexity required by each client to achieved the required level of inexactness using various local optimizers. Our theoretical insights are validated through comprehensive numerical experiments..</i>
+Abstract: <i>Enhancing the FedProx federated learning algorithm (Li et al., 2020) with server-side extrapolation, Li et al. (2024a) recently introduced the FedExProx method. Their theoretical analysis, however, relies on the assumption that each client computes a certain proximal operator exactly, which is impractical since this is virtually never possible to do in real settings. In this paper, we investigate the behavior of FedExProx without this exactness assumption in the smooth and globally strongly convex setting. We establish a general convergence result, showing that inexactness leads to convergence to a neighborhood of the solution. Additionally, we demonstrate that, with careful control, the adverse effects of this inexactness can be mitigated. By linking inexactness to biased compression (Beznosikov et al., 2023), we refine our analysis, highlighting robustness of extrapolation to inexact proximal updates. We also examine the local iteration complexity required by each client to achieved the required level of inexactness using various local optimizers. Our theoretical insights are validated through comprehensive numerical experiments.</i>
   
 <br>
 
@@ -152,6 +158,30 @@ Abstract: <i>Enhancing the FedProx federated learning algorithm (Li et al., 2020
 <br>
 <br> 
 
+<h3>September 25, 2024</h3>
+
+<h1>Charles Broyden Prize</h1>
+
+ <br>
+ 
+
+Just learned that together with Albert S. Berahas, Majid Jahani and Martin Takáč  we've won the  Charles Broyden Prize  for the paper "Quasi-Newton methods for deep learning: forget the past, just sample".  Super unexpected and nice!!!
+
+<br>  
+<br>
+
+<a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2021.1977806">
+<img alt="" src="imgs/Broyden-paper.jpeg" width="500">
+</a>
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
 
 
 <h3>September 24, 2024</h3>
@@ -162,6 +192,11 @@ Abstract: <i>Enhancing the FedProx federated learning algorithm (Li et al., 2020
 <a href="https://arxiv.org/abs/2409.14989">
 "Methods for Convex $(L_0,L_1)$-Smooth Optimization: Clipping, Acceleration, and Adaptivity"</a> -
 joint work with Eduard Gorbunov, Nazarii Tupitsa, Sayantan Choudhury, Alen Aliev, Samuel Horváth, and Martin Takáč.
+
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+
+<br>
+
  <br>
  <br>
   
