--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Abstract: <i>Enhancing the FedProx federated learning algorithm (Li et al., 2020
  <br>
  
 
-Just learned that together with Albert S. Berahas, Majid Jahani and Martin Takáč  we've won the  Charles Broyden Prize  for the paper "Quasi-Newton methods for deep learning: forget the past, just sample".  Super unexpected and nice!!!
+Just learned that together with Albert S. Berahas, Majid Jahani and Martin Takáč  we've won the  Charles Broyden Prize  for the paper "Quasi-Newton methods for deep learning: forget the past, just sample".  Unexpected; thanks!
 
 <br>  
 <br>
