Xin Gao conferemce

--- a/i_talks.html
+++ b/i_talks.html
@@ -58,18 +58,12 @@ The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (inv
 </p>
 
 <p>
-<a href="https://icomp.cc">International Conference on Computational Optimization (ICOMP-2024)</a>, Innopolis, Russian Federation, October 10-12, 2024 (plenary talk delivered virtually)
+Red Sea Research Conference on Frontiers in Computing, KAUST, Saudi Arabia, November 18-19, 2024 (invited)
 </p>
 
 <p>
-<a href="https://flta-conference.org">2nd IEEE International Conference on Federated Learning Technologies and Applications (FLTA 2024)</a>,  September 17-20, 2024, Valencia, Spain (keynote talk)
+<a href="https://icomp.cc">International Conference on Computational Optimization (ICOMP-2024)</a>, Innopolis, Russian Federation, October 10-12, 2024 (plenary talk)
 </p>
-
-
-
-
-
-
 
 
 <!-- <p>
@@ -91,6 +85,11 @@ The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (inv
 
 <h1>2024 Talks</h1>
 
+
+<p>
+[245]
+<a href="https://flta-conference.org">2nd IEEE International Conference on Federated Learning Technologies and Applications (FLTA 2024)</a>,  Valencia, Spain, September 17-20, 2024 (keynote talk)
+</p>
 
 <p>
 [244]
