--- a/i_papers.html
+++ b/i_papers.html
@@ -50,7 +50,11 @@
 
 <h1> Prepared in 2024 </h1>
 
-
+[261] 
+Artavazd Maranjyan, Omar Shaikh Omar, and Peter Richtárik<br>
+<b>MindFlayer: Efficient asynchronous parallel SGD in the presence of heterogeneous and random worker compute times</b><br>
+<span class="important">Asynchronous Optimization</span><br> 
+[<a href="https://arxiv.org/abs/2410.04285">arXiv</a>] [method: MindFlayer SGD, Vecna SGD] <br><br> 
 
 
 [260] 
