update NeurIPS 2024 workshop papers

--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
 
 
 
-<h3>October 4, 2024</h3>
+<h3>October 11, 2024</h3>
 <h1>Papers Accepted to NeurIPS 2024</h1>
 <br>
 We've had several papers accepted to the <a href="https://nips.cc/Conferences/2024">38th Annual Conference on Neural Information Processing Systems (NeurIPS 2024)</a>, which will run during December 10--15, 2024 in Vancouver, Canada.
 
 <br><br>
 
+Conference papers:
+
+<br><br>
 
 <b> 1) "PV-Tuning: Beyond Straight-Through Estimation for Extreme LLM Compression" </b><br>
 <a href="https://arxiv.org/abs/2405.14852">[arXiv]</a> <br>
@@ -120,11 +123,81 @@ by Grigory Malinovsky, Peter Richtárik, Samuel Horváth, and Eduard Gorbunov
 <span class="important">Poster</span><br>  
 <br>
 
+<br>
+
+Workshop papers:
+
+<br><br>
+
+
 <b> 10) "Cohort Squeeze: Beyond a Single Communication Round per Cohort in Cross-Device Federated Learning"</b><br>
 <a href="https://arxiv.org/abs/2406.01115">[arXiv]</a>  <br>
 by Kai Yi, Timur Kharisov, Igor Sokolov, and Peter Richtárik
 <br>
 <span class="important">FL Workshop Oral</span><br>  
+<br>
+
+<b> 11) "SPAM: Stochastic Proximal Point Method with Momentum Variance Reduction for Nonconvex Cross-Device Federated Learning"</b><br>
+<a href="https://arxiv.org/abs/2405.20127">[arXiv]</a>  <br>
+by Avetik Karagulyan, Egor Shulgin, Abdurakhmon Sadiev, and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 12) "Communication-Efficient Algorithms Under Generalized Smoothness Assumptions"</b><br>
+[arXiv]  <br>
+by Sarit Khirirat, Abdurakhmon Sadiev, Artem Riabinin, Eduard Gorbunov, and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 13) "LoCoDL: Communication-Efficient Distributed Learning with Local Training and Compression"</b><br>
+<a href="https://arxiv.org/abs/2403.04348">[arXiv]</a>  <br>
+by Laurent Condat, Artavazd Maranjyan, and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 14) "MindFlayer: Efficient Asynchronous Parallel SGD in the Presence of Heterogeneous and Random Worker Compute Times"</b><br>
+<a href="https://arxiv.org/abs/2410.04285">[arXiv]</a>  <br>
+by Artavazd Maranjyan, Omar Shaikh Omar, and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 15) "Differentially Private Random Block Coordinate Descent"</b><br>
+[arXiv] <br>
+by Arto Maranjyan, Abdurakhmon Sadiev, and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 16) "Local Curvature Descent: Squeezing More Curvature out of Standard and Polyak Gradient Descent"</b><br>
+<a href="https://arxiv.org/abs/2405.16574">[arXiv]</a>  <br>
+by Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 17) "On the Convergence of FedProx with Extrapolation and Inexact Prox"</b><br>
+<a href="https://arxiv.org/abs/2410.01410">[arXiv]</a>  <br>
+by Hanmin Li and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 18) "Stochastic Proximal Point Methods for Monotone Inclusions under Expected Similarity"</b><br>
+<a href="https://arxiv.org/abs/2405.14255">[arXiv]</a>  <br>
+by Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
+<br>
+
+<b> 19) "On Convergence of SGD with Adaptive Clipping"</b><br>
+[arXiv]  <br>
+by Egor Shulgin and Peter Richtárik
+<br>
+<span class="important">NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024)</span><br>  
 <br>
 
 
