--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,8 @@
 [261] 
 Artavazd Maranjyan, Omar Shaikh Omar, and Peter Richtárik<br>
 <b>MindFlayer: Efficient asynchronous parallel SGD in the presence of heterogeneous and random worker compute times</b><br>
+NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
+to be presented at <a href="https://deepmath-conference.com/submissions">Conference on the Mathematical Theory of Deep Neural Networks (DeepMath 2024)</a>
 <span class="important">Asynchronous Optimization</span><br> 
 [<a href="https://arxiv.org/abs/2410.04285">arXiv</a>] [method: MindFlayer SGD, Vecna SGD] <br><br> 
 
@@ -60,6 +62,7 @@ Artavazd Maranjyan, Omar Shaikh Omar, and Peter Richtárik<br>
 [260] 
 Hanmin Li and Peter Richtárik<br>
 <b>On the convergence of FedProx with extrapolation and inexact prox</b><br>
+NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 <span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2410.01410">arXiv</a>] [method: FedExProx] <br><br> 
 
@@ -84,6 +87,7 @@ Georg Meinhardt, Kai Yi, Laurent Condat, and Peter Richtárik<br>
 [256] 
 Avetik Karagulyan, Egor Shulgin, Abdurakhmon Sadiev, and Peter Richtárik<br>
 <b>SPAM: Stochastic proximal point method with momentum variance reduction for non-convex cross-device federated learning</b><br>
+NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 <span class="important">Federated Learning Paper</span><br>  
 [<a href="https://arxiv.org/abs/2405.20127">arXiv</a>] [method: SPAM] <br><br> 
 
@@ -94,7 +98,8 @@ Laurent Condat and Peter Richtárik<br>
 
 [254] 
 Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
-<b>Local curvature descent: squeezing more curvature out of standard and Polyak gradient descent</b><br>
+<b>Local curvature descent: Squeezing more curvature out of standard and Polyak gradient descent</b><br>
+NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 [<a href="https://arxiv.org/abs/2405.16574">arXiv</a>] [method: LCD1, LCD2, LCD3] <br><br> 
 
 [253] 
@@ -134,6 +139,7 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 [248] 
 Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik<br>
 <b>Stochastic proximal point methods for monotone inclusions under expected similarity</b><br>
+NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 [<a href="https://arxiv.org/abs/2405.14255">arXiv</a>] [method: SPPM, SPPM-OC, L-SVRP] <br><br> 
 
 [247] 
@@ -157,6 +163,7 @@ Yury Demidovich, Grigory Malinovsky, and Peter Richtárik<br>
 [244] 
 Laurent Condat, Artavazd Maranjyan, and Peter Richtárik<br>
 <b>LoCoDL: Communication-efficient distributed learning with local training and compression</b><br>
+NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2403.04348">arXiv</a>] [method: LoCoDL] <br><br> 
 
