2 more papers (RAC-LoRA and FedNL - Kostya)

--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,19 @@
 
 <h1> Prepared in 2024 </h1>
 
+[263] 
+Konstantin Burlachenko and Peter Richtárik<br>
+<b>Unlocking FedNL: Self-contained compute-optimized implementation</b><br>
+[<a href="https://arxiv.org/abs/2410.08760">arXiv</a>] [method: FedNL, FedNL-LS, FedNL-PP] <br><br> 
+
+
+[262] 
+Grigory Malinovsky, Umberto Michieli, Hasan Abed Al Kader Hammoud, Taha Ceritli, Hayder Elesedy, Mete Ozay, and Peter Richtárik<br>
+<b>Randomized asymmetric chain of LoRA: The first meaningful theoretical framework for low-rank adaptation</b><br>
+<span class="important">LLM Paper</span><br> 
+[<a href="https://arxiv.org/abs/2410.08305">arXiv</a>] [method: RAC-LoRA, Fed-RAC-LoRA] <br><br> 
+
+
 [261] 
 Artavazd Maranjyan, Omar Shaikh Omar, and Peter Richtárik<br>
 <b>MindFlayer: Efficient asynchronous parallel SGD in the presence of heterogeneous and random worker compute times</b><br>
@@ -112,7 +125,7 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 [252] 
 Peter Richtárik, Abdurakhmon Sadiev, and Yury Demidovich<br>
 <b>A unified theory of stochastic proximal point methods without smoothness</b><br>  
-[<a href="https://arxiv.org/abs/2405.15941">arXiv</a>] [method: MicroAdam] <br><br> 
+[<a href="https://arxiv.org/abs/2405.15941">arXiv</a>] [method: SPPM, SPPM-LC, SPPM-NS, SPPM-AS, SPPM*, SPPM-GC, L-SVRP, Point SAGA] <br><br> 
 
 [251] 
 Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh<br>
