--- a/i_talks.html
+++ b/i_talks.html
@@ -46,7 +46,27 @@
 <h1>Future Talks</h1>
 
 <p>
+Introduction to Machine Learning 2/2, Aramco, October 30 - November 2, 2025 (24 hours)
+</p>
+
+<p>
+Introduction to Machine Learning 1/2, Aramco, October 9-12, 2025 (24 hours)
+</p>
+
+<p>
+Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
+</p>
+
+<p>
 <a href="https://sites.google.com/view/iccopt2025/home">2025 International Conference on Continuous Optimization (ICCOPT 2025)</a>, The University of Southern California, Los Angeles, USA, July 19-24, 2025
+</p>
+
+<p>
+<a href="https://essai2025.eu">3rd European Summer School on Artificial Intelligence</a>, Bratislava, Slovakia, June 30 - July 4, 2025 (invited)
+</p>
+
+<p>
+Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 </p>
 
 <p>
@@ -60,11 +80,6 @@ The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (inv
 <p>
 Red Sea Research Conference on Frontiers in Computing, KAUST, Saudi Arabia, November 18-19, 2024 (invited)
 </p>
-
-<p>
-<a href="https://icomp.cc">International Conference on Computational Optimization (ICOMP-2024)</a>, Innopolis, Russian Federation, October 10-12, 2024 (plenary talk)
-</p>
-
 
 <!-- <p>
 <a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
@@ -85,6 +100,10 @@ Red Sea Research Conference on Frontiers in Computing, KAUST, Saudi Arabia, Nove
 
 <h1>2024 Talks</h1>
 
+<p>
+[246]
+<a href="https://icomp.cc">International Conference on Computational Optimization (ICOMP-2024)</a>, Innopolis, Russian Federation, October 10-12, 2024 (plenary talk)
+</p>
 
 <p>
 [245]
@@ -143,9 +162,6 @@ CS Graduate Seminar, KAUST, Saudi Arabia, September 2, 2024
 <a href="https://sites.google.com/view/wnopta/home">Workshop on Nonsmooth Optimization and Applications (NOPTA 2024)</a>, in Honor of the 75th Birthday of Boris Mordukhovich, University of Antwerp, Belgium, April 8-12, 2024 (plenary talk)
 </p>
 
-
-<h1>2023 Talks</h1>
-
 <p>
 [235]
 Apple Workshop on Privacy Preserving Machine Learning 2024, Cupertino, California, February 29 -- March 1, 2024 (invited)
@@ -155,6 +171,8 @@ Apple Workshop on Privacy Preserving Machine Learning 2024, Cupertino, Californi
 [234]
 Three 50 min lectures on Optimization for Machine Learning, AMCS-STAT School, KAUST, Saudi Arabia, February 25, 2024 (invited)
 </p>
+
+<h1>2023 Talks</h1>
 
 <p>
 [233]
