--- a/i_talks.html
+++ b/i_talks.html
@@ -62,6 +62,10 @@ Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
 </p>
 
 <p>
+<a href="https://icml.cc/Conferences/2025">The Forty-Second International Conference on Machine Learning (ICML 2025)</a>, Vancouver, Canada, July 13-19, 2025 
+</p>
+
+<p>
 <a href="https://essai2025.eu">3rd European Summer School on Artificial Intelligence</a>, Bratislava, Slovakia, June 30 - July 4, 2025 (invited)
 </p>
 
@@ -75,6 +79,15 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 
 <p>
 The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (invited lecturer)
+</p>
+
+<p>
+<a href="https://virtual.aistats.org/Conferences/2025">The 28th International Conference on Artificial Intelligence and Statistics (AISTATS 2025)</a>, Splash Beach Resort, Mai Khao, Thailand, May 3-5, 2025 
+</p>
+
+
+<p>
+<a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
 </p>
 
 <p>
