--- a/i_talks.html
+++ b/i_talks.html
@@ -54,6 +54,10 @@ Introduction to Machine Learning 1/2, Aramco, October 9-12, 2025 (24 hours)
 </p>
 
 <p>
+The Machine Learning Summer School (MLSS 2025), MBour, Senegal, August 2025 (invited lecturer)
+</p>
+
+<p>
 Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
 </p>
 
@@ -78,13 +82,8 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 </p>
 
 <p>
-The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (invited lecturer)
-</p>
-
-<p>
 <a href="https://virtual.aistats.org/Conferences/2025">The 28th International Conference on Artificial Intelligence and Statistics (AISTATS 2025)</a>, Splash Beach Resort, Mai Khao, Thailand, May 3-5, 2025 
 </p>
-
 
 <p>
 <a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
