--- a/i_talks.html
+++ b/i_talks.html
@@ -90,6 +90,10 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 </p>
 
 <p>
+<a href="https://cemse.kaust.edu.sa/amfs">Applied Mathematics School</a>, KAUST, Saudi Arabia, December 1-5, 2024 (invited)
+</p>
+
+<p>
 Red Sea Research Conference on Frontiers in Computing, KAUST, Saudi Arabia, November 18-19, 2024 (invited)
 </p>
 
