--- a/i_papers.html
+++ b/i_papers.html
@@ -50,18 +50,22 @@
 
 <h1> Prepared in 2024 </h1>
 
+[264] 
+Vladimir Malinovskii, Andrei Panferov, Ivan Ilin, Han Guo, Peter Richtárik, and Dan Alistarh<br>
+<b>Pushing the limits of large language model quantization via the linearity theorem</b><br>
+<span class="important">LLM Paper</span><br> 
+[<a href="https://arxiv.org/abs/2411.17525">arXiv</a>] [method: HIGGS] <br><br> 
+
 [263] 
 Konstantin Burlachenko and Peter Richtárik<br>
 <b>Unlocking FedNL: Self-contained compute-optimized implementation</b><br>
 [<a href="https://arxiv.org/abs/2410.08760">arXiv</a>] [method: FedNL, FedNL-LS, FedNL-PP] <br><br> 
-
 
 [262] 
 Grigory Malinovsky, Umberto Michieli, Hasan Abed Al Kader Hammoud, Taha Ceritli, Hayder Elesedy, Mete Ozay, and Peter Richtárik<br>
 <b>Randomized asymmetric chain of LoRA: The first meaningful theoretical framework for low-rank adaptation</b><br>
 <span class="important">LLM Paper</span><br> 
 [<a href="https://arxiv.org/abs/2410.08305">arXiv</a>] [method: RAC-LoRA, Fed-RAC-LoRA] <br><br> 
-
 
 [261] 
 Artavazd Maranjyan, Omar Shaikh Omar, and Peter Richtárik<br>
@@ -70,7 +74,6 @@ NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 to be presented at <a href="https://deepmath-conference.com/submissions">Conference on the Mathematical Theory of Deep Neural Networks (DeepMath 2024)</a>
 <span class="important">Asynchronous Optimization</span><br> 
 [<a href="https://arxiv.org/abs/2410.04285">arXiv</a>] [method: MindFlayer SGD, Vecna SGD] <br><br> 
-
 
 [260] 
 Hanmin Li and Peter Richtárik<br>
