--- a/i_talks.html
+++ b/i_talks.html
@@ -90,11 +90,7 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 </p>
 
 <p>
-<a href="https://cemse.kaust.edu.sa/amfs">Applied Mathematics School</a>, KAUST, Saudi Arabia, December 1-5, 2024 (invited)
-</p>
-
-<p>
-Red Sea Research Conference on Frontiers in Computing, KAUST, Saudi Arabia, November 18-19, 2024 (invited)
+<a href="https://cemse.kaust.edu.sa/amfs">Applied Mathematics School</a>, KAUST, Saudi Arabia, December 1-5, 2024 (lecturer)
 </p>
 
 <!-- <p>
@@ -115,6 +111,46 @@ Red Sea Research Conference on Frontiers in Computing, KAUST, Saudi Arabia, Nove
 
 
 <h1>2024 Talks</h1>
+
+<p>
+[254]
+Optimization for Machine Learning 5/5, Beijing Institute for Mathematical Sciences and Applications (BIMSA), Beijing, China, November 28, 2024 (invited lecture)
+</p>
+
+<p>
+[253]
+Optimization for Machine Learning 4/5, Beijing Institute for Mathematical Sciences and Applications (BIMSA), Beijing, China, November 27, 2024 (invited lecture)
+</p>
+
+<p>
+[252]
+Research Seminar Talk, Peking University, Beijing, China, November 26, 2024 (invited)
+</p>
+
+<p>
+[251]
+Research Seminar Talk, Shanghai Institute for Mathematics and Interdisciplinary Sciences (SIMIS), Shanghai, China, November 25, 2024 (invited)
+</p>
+
+<p>
+[250]
+Research Seminar Talk, Tsinghua University, Beijing, China, November 22, 2024 (invited)
+</p>
+
+<p>
+[249]
+Optimization for Machine Learning 3/5, Beijing Institute for Mathematical Sciences and Applications (BIMSA), Beijing, China, November 21, 2024 (invited lecture)
+</p>
+
+<p>
+[248]
+Optimization for Machine Learning 2/5, Beijing Institute for Mathematical Sciences and Applications (BIMSA), Beijing, China, November 20, 2024 (invited lecture)
+</p>
+
+<p>
+[247]
+Optimization for Machine Learning 1/5, Beijing Institute for Mathematical Sciences and Applications (BIMSA), Beijing, China, November 18, 2024 (invited lecture)
+</p>
 
 <p>
 [246]
