--- a/i_papers.html
+++ b/i_papers.html
@@ -50,11 +50,23 @@
 
 <h1> Prepared in 2024 </h1>
 
-[264] 
+[266] 
 Vladimir Malinovskii, Andrei Panferov, Ivan Ilin, Han Guo, Peter Richtárik, and Dan Alistarh<br>
 <b>Pushing the limits of large language model quantization via the linearity theorem</b><br>
 <span class="important">LLM Paper</span><br> 
 [<a href="https://arxiv.org/abs/2411.17525">arXiv</a>] [method: HIGGS] <br><br> 
+
+[265] 
+Sarit Khirirat, Abdurakhmon Sadiev, Artem Riabinin, Eduard Gorbunov, and Peter Richtárik<br>
+<b>Error feedback under $(L_0,L_1)$-smoothness: normalization and momentum </b><br>
+<span class="important">Federated Learning Paper</span><br>   
+[<a href="https://arxiv.org/abs/2410.16871">arXiv</a>] [method: ||EF21||, ||EF21-SGDM||] <br><br> 
+
+[264] 
+Wojciech Anyszka, Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
+<b>Tighter performance theory of FedExProx</b><br>
+<span class="important">Federated Learning Paper</span><br>   
+[<a href="https://arxiv.org/abs/2410.15368">arXiv</a>] [method: FedExProx] <br><br> 
 
 [263] 
 Konstantin Burlachenko and Peter Richtárik<br>
