--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Abstract: <i>We provide the first proof of convergence for normalized error feed
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2410.15368">
 "Tighter Performance Theory of FedExProx"</a> -
-joint work with Konstantin Burlachenko.
+joint work with Wojciech Anyszka, Kaja Gruntkowska, and Alexander Tyurin.
 <br>
 <br>
   
